# aa-timezones

./: .coveragerc  .editorconfig  .eslintrc.json  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .stylelintrc.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  codecov.yml  package-lock.json  package.json  pyproject.toml  runtests.py  setup.cfg  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: automated-checks.yml  black.yml  potential-duplicates.yml  pre-commit.yml  pypi-package-build-test.yml  pypi-release.yml  release.yml
.make/conf.d/: development.mk  django-esi.mk  django.mk  formatting.mk  git.mk  pre-commit.mk  redis.mk  tests.mk
aa_timezones/: __init__.py  app_settings.py  apps.py  auth_hooks.py  tasks.py  urls.py  views.py
aa_timezones/static/aa_timezones/css/: time-zones.min.css
aa_timezones/static/aa_timezones/css/weather-icons/css/: weather-icons-wind.css
aa_timezones/static/aa_timezones/css/weather-icons/values/: weathericons.xml
aa_timezones/static/aa_timezones/js/: clock-timezones.js  jquery.timeago.min.js  moment-timezone-with-data-2012-2022.js
aa_timezones/templates/aa_timezones/: base.html  index.html
locale/: it_IT.json
nbproject/: project.properties  project.xml
testauth/: base.py  celery.py  local.py  settings.py  settings_aa3x.py  urls.py  wsgi.py
testauth/settings/: base.py  local.py
testauth/settings/testing/: base.py  local.py
timezones/: __init__.py  admin.py  app_settings.py  apps.py  auth_hooks.py  constants.py  models.py  providers.py  tasks.py  tests.py  urls.py  utils.py  views.py
timezones/aadiscordbot/cogs/: time.py
timezones/helper/: static_files.py  urls.py
timezones/locale/: django.pot
timezones/locale/cs/LC_MESSAGES/: django.mo  django.po
timezones/locale/cs_CZ/LC_MESSAGES/: django.mo  django.po
timezones/locale/de/LC_MESSAGES/: django.mo  django.po
timezones/locale/en/LC_MESSAGES/: django.po
timezones/locale/es/LC_MESSAGES/: django.mo  django.po
timezones/locale/fr_FR/LC_MESSAGES/: django.mo  django.po
timezones/locale/it_IT/LC_MESSAGES/: django.mo  django.po
timezones/locale/ja/LC_MESSAGES/: django.mo  django.po
timezones/locale/ko/LC_MESSAGES/: django.po
timezones/locale/ko_KR/LC_MESSAGES/: django.mo  django.po
timezones/locale/nl/LC_MESSAGES/: django.mo  django.po
timezones/locale/nl_NL/LC_MESSAGES/: django.mo  django.po
timezones/locale/pl_PL/LC_MESSAGES/: django.mo  django.po
timezones/locale/ru/LC_MESSAGES/: django.mo  django.po
timezones/locale/sk/LC_MESSAGES/: django.mo  django.po
timezones/locale/uk/LC_MESSAGES/: django.mo  django.po
timezones/locale/zh_Hans/LC_MESSAGES/: django.mo  django.po
timezones/management/commands/: timezones_load_tz_data.py
timezones/migrations/: 0001_initial.py  0002_timezonedata_timezones.py  0003_auto_20201003_1748.py  0004_delete_aatimezones.py  0005_alter_timezonedata_options.py
timezones/providers/: __init__.py  applogger.py
timezones/static/timezones/css/: aa-bootstrap-fix.css  aa-bootstrap-fix.min.css  aa-bootstrap-fix.min.css.map  timezones.css  timezones.min.css  timezones.min.css.map
timezones/static/timezones/css/weather-icons/css/: weather-icons-wind.min.css  weather-icons.css  weather-icons.min.css
timezones/static/timezones/css/weather-icons/less/: weather-icons-core.less  weather-icons-variables.less  weather-icons-wind.min.less
timezones/static/timezones/css/weather-icons/less/icon-classes/: classes-beaufort.less  classes-day.less  classes-direction.less  classes-misc.less  classes-moon-aliases.less  classes-moon.less  classes-neutral.less  classes-night.less  classes-time.less  classes-wind-aliases.less  classes-wind-degrees.less  classes-wind.less
timezones/static/timezones/css/weather-icons/less/icon-variables/: variables-beaufort.less  (+8 more)
timezones/static/timezones/css/weather-icons/sass/: weather-icons.min.scss  weather-icons.scss
timezones/static/timezones/js/: jquery.timeago.js  moment-timezone-with-data-2012-2022.min.js  timezones.js  timezones.min.js  timezones.min.js.map
timezones/static/timezones/js/moment/: moment-timezone-with-data-1970-2030.js  moment-timezone-with-data-1970-2030.min.js  moment.min.js
timezones/static/timezones/js/timeago/: jquery.timeago.js  jquery.timeago.min.js
timezones/static/timezones/legacy_templates/css/: aa-bootstrap-fix.min.css  timezones.min.css
timezones/static/timezones/legacy_templates/js/: timezones.js  timezones.min.js.map
timezones/static/timezones/libs/moment-timezone/0.6.0/: moment-timezone-with-data-1970-2030.min.js  moment-timezone-with-data-1970-2030.min.js.map
timezones/static/timezones/libs/moment-timezone/0.6.1/: moment-timezone-with-data-1970-2030.min.js  moment-timezone-with-data-1970-2030.min.js.map
timezones/static/timezones/libs/weather-icons/2.0.10/: README.md
timezones/templates/timezones/: adjust-time.html  base.html  index.html  time-until.html  timezone-panel.html
timezones/templates/timezones/bundles/: aa-timezones-css.html  aa-timezones-js.html  jquery-timeago-js.html  moment-timezone-js.html  weather-icons-css.html
timezones/templates/timezones/legacy_templates/: base.html  index.html
timezones/templates/timezones/legacy_templates/bundles/: aa-timezones-css.html  aa-timezones-js.html
timezones/templates/timezones/legacy_templates/partials/footer/: app-translation-footer.html
timezones/templates/timezones/legacy_templates/partials/timezones/: time-until.html
timezones/templates/timezones/partials/footer/: app-translation-footer.html
timezones/templates/timezones/partials/timezones/: adjust-time.html  time-until.html  timezone-panel.html
timezones/templatetags/: __init__.py  timezones.py  timezones_versioned_static.py
timezones/tests/: __init__.py  test_access.py  test_admin.py  test_app_settings.py  test_auth_hooks.py  test_helper_urls.py  test_models.py  test_providers.py  test_templatetags.py  test_view.py  utils.py
(+24 files in other folders)
