[metadata]
name = aa_timezones
version = attr: timezones.__version__
description = Time Zones Overview for Alliance Auth
long_description = file: README.md
long_description_content_type = text/markdown
author = Peter Pfeufer
author_email = development@ppfeufer.de
maintainer = Peter Pfeufer
maintainer_email = development@ppfeufer.de
license = GPL-3.0
license_file = LICENSE
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
home_page = https://github.com/ppfeufer/aa-timezones
keywords =
    allianceauth
    eveonline
    time
    timezones
project_urls =
    Issue / Bug Reports = https://github.com/ppfeufer/aa-timezones/issues
    Changelog = https://github.com/ppfeufer/aa-timezones/blob/master/CHANGELOG.md

[options]
packages = find:
install_requires =
    allianceauth>=2.11.0
    pytz
python_requires = ~=3.7
include_package_data = True
zip_safe = False

[options.packages.find]
include = timezones
